vlib/v/checker/tests/addr_of_invalid_expr.vv
fn main() {
	a := 1
	_ := &(&a)
}
